<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_character_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/dialog_fragment_filter_width"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_medium"
            android:gravity="center"
            android:text="@string/fragment_character_filter_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/common_text_size_medium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_medium"
            android:layout_marginTop="@dimen/common_margin_medium"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/species_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_filter_species_hint"
                android:inputType="text"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_medium"
            android:layout_marginTop="@dimen/common_margin_medium"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_filter_type_hint"
                android:inputType="text"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_medium"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:orientation="horizontal"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/gender_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/character_filter_gender_hint"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_status"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin_medium"
            android:layout_marginTop="@dimen/common_margin_medium"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/status_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/character_filter_status_hint"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin_medium">

            <Button
                android:id="@+id/btn_clear"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_filter_clear_button_text" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_filter_cancel_button_text"
                android:textColor="?android:textColorPrimary" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_filter_apply_button_text"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
