<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/toolbar_back_button_icon"
            app:title="@string/episode_details_screen_title">

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:visibility="invisible"
                tools:visibility="visible" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_error_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:gravity="center"
            android:paddingVertical="@dimen/tv_error_bar_vertical_padding"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:text="@string/error_message_network_connection_error" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_episode_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin_medium"
                    android:gravity="center_horizontal"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/common_text_size_extra_large"
                    android:textStyle="bold"
                    tools:text="Pilot" />

                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/common_text_size_medium"
                    tools:text="Code: S01E01" />

                <TextView
                    android:id="@+id/tv_air_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/common_text_size_medium"
                    tools:text="Air date: December 2, 2013" />

                <TextView
                    android:id="@+id/tv_characters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin_large"
                    android:gravity="center_horizontal"
                    android:text="@string/episode_details_screen_subtitle_characters"
                    android:textSize="@dimen/common_text_size_large"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    tools:text="@string/episode_details_screen_subtitle_characters"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_character_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="5"
                    tools:listitem="@layout/list_item_character" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.appcompat.widget.LinearLayoutCompat>

